.kubernetes/prod-planoverao/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mapa-realizacoes-planoverao-ingress
  namespace: mapa-realizacoes
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
    - hosts:
        - mapaplanoverao.dados.rio
      secretName: mapa-realizacoes-planoverao-tls
  rules:
    - host: mapaplanoverao.dados.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mapa-realizacoes-planoverao
                port:
                  number: 80
